feat(math-sentences): add math sentence worksheet

--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   ],
   "scripts": {
     "build": "stencil build --docs",
-    "start": "stencil build --dev --watch --serve",
+    "start": "stencil build --dev --watch --serve --no-open",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate"
   },
   "dependencies": {
-    "@stencil/core": "^2.0.1",
+    "@stencil/core": "^2.11.0",
     "@stencil/sass": "^1.4.1"
   },
   "license": "MIT",
