--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dc-math-tools",
   "version": "0.0.1",
+  "private": true,
   "description": "Stencil Component Starter",
   "main": "dist/index.cjs.js",
   "module": "dist/custom-elements/index.js",
